--- a/index.html
+++ b/index.html
@@ -1,91 +1,154 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>F-16 Motivation HUD</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: "Segoe UI", sans-serif;
-            color: #00FF00;
-            background: #000;
-            overflow: hidden;
-        }
+<meta charset="UTF-8">
+<title>F-16 Tactical HUD</title>
 
-        #bg {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0.35;
-            z-index: -1;
-        }
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
-        #hud {
-            position: absolute;
-            top: 10%;
-            width: 100%;
-            text-align: center;
-            font-size: 26px;
-            text-shadow: 0 0 8px #00FF00;
-        }
+<style>
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Orbitron', sans-serif;
+    background: black;
+    color: #00ff88;
+    overflow: hidden;
+}
 
-        #quote {
-            margin-top: 40vh;
-            font-size: 32px;
-            font-weight: bold;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+/* Arka plan F16 */
+body::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: url("https://images.unsplash.com/photo-1581093588401-22f6c07a0b58?auto=format&fit=crop&w=1600&q=80") no-repeat center center/cover;
+    opacity: 0.35;
+    z-index: -2;
+}
 
-        #btn {
-            margin-top: 40px;
-            font-size: 20px;
-            padding: 12px 24px;
-            background: transparent;
-            border: 2px solid #00FF00;
-            color: #00FF00;
-            cursor: pointer;
-        }
-    </style>
+/* Radar overlay */
+body::after {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: repeating-linear-gradient(
+        0deg,
+        rgba(0,255,136,0.05),
+        rgba(0,255,136,0.05) 2px,
+        transparent 2px,
+        transparent 4px
+    );
+    z-index: -1;
+}
+
+/* HUD Üst Bilgi */
+#header {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 14px;
+    opacity: 0.7;
+}
+
+/* Motivasyon Yazısı */
+#quote {
+    position: absolute;
+    top: 45%;
+    width: 100%;
+    text-align: center;
+    font-size: 32px;
+    padding: 0 20px;
+    text-shadow: 0 0 10px #00ff88, 0 0 20px #00ff88;
+}
+
+/* Buton */
+button {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 12px 25px;
+    background: transparent;
+    border: 2px solid #00ff88;
+    color: #00ff88;
+    cursor: pointer;
+    font-family: 'Orbitron', sans-serif;
+}
+
+button:hover {
+    background: #00ff88;
+    color: black;
+}
+
+/* Söz ekleme alanı */
+#addBox {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+input {
+    padding: 10px;
+    width: 300px;
+    background: black;
+    border: 1px solid #00ff88;
+    color: #00ff88;
+    font-family: 'Orbitron', sans-serif;
+}
+</style>
 </head>
 <body>
 
-<img id="bg" src="https://images.unsplash.com/photo-1546776312-133fa83f031d?auto=format&fit=crop&w=1350&q=80" alt="F-16">
-
-<div id="hud">
-    ✦ F-16 HUD Motivasyon Sistemi ✦
+<div id="header">
+F-16 TACTICAL MORALE SYSTEM • ACTIVE
 </div>
 
 <div id="quote"></div>
+<button onclick="newQuote()">YENİ MESAJ</button>
 
-<button id="btn">Yeni Söz</button>
+<div id="addBox">
+<input type="text" id="newInput" placeholder="Yeni motivasyon ekle">
+<button onclick="addQuote()">EKLE</button>
+</div>
 
 <script>
-    let quotes = [
-        "Disiplin motivasyonun bittiği yerde başlar.",
-        "Her gün uçuş günüdür.",
-        "Yavaş ilerlemek sorun değil, durmak sorundur.",
-        "Konfor alanı gelişimin düşmanıdır.",
-        "Kimse senin yerine savaşmayacak.",
-        "Bahane üretme, sonuç üret.",
-        "Görev seni çağırıyor!",
-        "Hedef yüksekte, irade sağlam.",
-        "Harekete geçmek zaferin ilk adımıdır."
-    ];
 
-    function showQuote() {
-        const i = Math.floor(Math.random() * quotes.length);
-        document.getElementById("quote").innerText = quotes[i];
+let defaultQuotes = [
+"Disiplin motivasyonun bittiği yerde başlar.",
+"Hedef kilitlendi. İrade serbest.",
+"Zor olanı seç. Kolay olan sıradandır.",
+"Bugünkü mücadele yarının gücüdür.",
+"Bahane değil, sonuç üret.",
+"Konfor alanı savaş alanıdır.",
+"İstikrar = Üstünlük.",
+"Yavaş olabilirsin ama geri olamazsın.",
+"Görev iptal edilmez.",
+"Standart değil, üstün ol."
+];
+
+let quotes = JSON.parse(localStorage.getItem("quotes")) || defaultQuotes;
+
+function newQuote() {
+    let i = Math.floor(Math.random() * quotes.length);
+    document.getElementById("quote").innerText = quotes[i];
+}
+
+function addQuote() {
+    let input = document.getElementById("newInput");
+    if(input.value.trim() !== ""){
+        quotes.push(input.value);
+        localStorage.setItem("quotes", JSON.stringify(quotes));
+        input.value = "";
+        alert("Mesaj sisteme eklendi.");
     }
+}
 
-    document.getElementById("btn").onclick = showQuote;
-    showQuote();
+newQuote();
+
 </script>
 
 </body>
